--- a/.hgignore
+++ b/.hgignore
@@ -1,3 +1,8 @@
 syntax: glob
 Lab/Client/OTP-Tool-build-Desktop_Qt_5_0_1_MinGW_32bit-*
 Lab/Client/OTP-Tool/OTP-Tool.pro.user
+*.exe
+Lab/Client2/OTP_Locker/obj/
+Lab/Client2/OTP_Tool/bin
+Lab/Client2/OTP_Tool/obj/
+Lab/Client2/OTPUtilities/obj
