Encryption and Decruptiong works. The User can only use the tool if the OTP is correct.
Need to complete the report, and Test.

--- a/Lab/Client2/OTPHelpers/OTPHelpers.csproj
+++ b/Lab/Client2/OTPHelpers/OTPHelpers.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Encryptor.cs" />
     <Compile Include="Icons.Designer.cs">
       <DependentUpon>Icons.resx</DependentUpon>
       <AutoGen>True</AutoGen>
